2002-12-12  Sam Steingold  <sds@gnu.org>

	* stream.d (key_event): renamed to key_event_t
	(add_keybinding): renamed to keybinding();
	second argument is a struct, not a pointer now
	(keybinding): removed the macro
	(make_keyboard_stream): use new macros BIND_KEY() and CHECK_CAP()

2002-12-12  Sam Steingold  <sds@gnu.org>

	reversed the 2001-11-27 patch: elt_nreverse() reverses
	_bits_ in the bitvector, while we need to swap _bytes_
	* stream.d (byte_swap): new function
	(READ-INTEGER, READ-FLOAT, WRITE-INTEGER, WRITE-FLOAT):
	use it instead of elt_nreverse()
	Reported by Bernard Urban <Bernard.Urban@meteo.fr>

2002-12-12  Sam Steingold  <sds@gnu.org>

	* init.lisp (expand-form): export the code walker

2002-12-12  Sam Steingold  <sds@gnu.org>

	* unixconf.h.in (ENABLE_NLS): added (this fixes
	the 2002-07-19 lispbibl.d patch)

2002-12-12  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	* pathname.d (TrueName) [WIN32_NATIVE]: fixed a bug -
	assure_dir_exists returned false on D:\ (D - any drive).

2002-12-12  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	Fix MSVC compilation
	* stream.d (sock_opt_bool, sock_opt_int, sock_opt_time)
	(socket_options): use SOCKLEN_T instead of socklen_t.
	* spvw_mmap.d (mmap_zeromap) [HAVE_WIN32_VM]: fix declaration.

2002-12-11  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (debug-inspect-error): new function
	(commands1): bind it to Inspect/:i
	(break-loop): handle inspect-error catch'ed return

2002-12-11  Sam Steingold  <sds@gnu.org>

	* debug.d (break_driver): restore back_trace before
	unwind()/reset() when the error is not continuable;
	use const and p_backtrace_t as appropriate

2002-12-11  Sam Steingold  <sds@gnu.org>

	DRIBBLE now works by redefining *TERMINAL-IO* instead of a host
	of i/o variables; new type DRIBBLE-STREAM
	* dribble.lisp: full rewrite
	* savemem.lisp (saveinitmem): DRIBBLE-RESET is no longer needed

2002-12-04  Bruno Haible  <bruno@clisp.org>

	Avoid conditional expressions of the form